--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <header class="header">
         <div class="container">
-            <nav>
+            <nav class="header-nav">
                 <div class="header-display">
                     <ul class="header-logo-list">
                         <li><a class="header-logo-link" href="#"><span class="header-logo-style">SIMPLY</span> <span
