--- a/index.html
+++ b/index.html
@@ -75,11 +75,15 @@
 
     </header>
     <section class="section-buy">
-        <p>Treat yourself or a loved one to our finest ingredients for a moment of pure delight!</p>
-        <div>
-            <button type="button">Buy now</button>
-            <button type="button">How it’s made</button>
-            <p>scroll</p>
+        <div class="container buy-section">
+            <p class="buy-text">Treat yourself or a loved one to our finest ingredients for a moment of pure delight!</p>
+            <div class="buy-box-button">
+                <button class="buy-now-button" type="button">Buy now</button>
+                <button class="buy-how-button" type="button">How it’s made</button>
+                <div>
+                    <p class="buy-text-scroll">scroll down</p>
+                </div>
+            </div>
         </div>
     </section>
     <section>
@@ -130,6 +134,39 @@
                 </article>
             </li>
         </ul>
+    </section>
+    <section class="info-section">
+        <span class="info-title">IT ALL ADDS UP TO ONE EXCEPTIONAL <span class="info-title-color">TASTE</span>
+            SENSATION</span>
+        <p>At Simply Chocolate, we believe that the secret to exceptional chocolate is in the details. From the sourcing
+            of the finest ingredients to the careful crafting of each individual piece, every step of our process adds
+            up to one exceptional taste sensation.</p>
+<ul class="info-list">
+    <li class="info-item">
+        <article class="info-article">
+            <img class="info-image" src="#" alt="chocolate">
+            <p class="info-text">mILK CHOCOLATE</p>
+        </article>
+    </li>
+    <li class="info-item">
+        <article class="info-article">
+            <img class="info-image" src="#" alt="milk">
+            <p class="info-text">Milk</p>
+        </article>
+    </li>
+    <li class="info-item">
+        <article class="info-article">
+            <img class="info-image" src="#" alt="nuts">
+            <p class="info-text">nuts</p>
+        </article>
+    </li class="info-item">
+    <li>
+        <article class="info-article">
+            <img class="info-image" src="#" alt="semi">
+            <p class="info-text">sEMI - SWEET CHOCOLATE</p>
+        </article>
+    </li>
+</ul>
     </section>
 </body>
 
