how-made-section

--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <title>Chocolate shop</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter&family=Italiana&family=Montserrat:ital@0;1&display=swap"
-        rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,500;1,500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
 </head>
 
@@ -169,6 +170,37 @@
             </article>
         </li>
     </ul>
+        </div>
+    </section>
+    <section class="section-how-made">
+        <div class="container">
+            <div class="how-made-box"><span class="how-made-title">hOW IT’S <span class="how-made-title-color">made?</span></span></div>
+<!-- <video width="600px" controls preload="auto" src="./how-made-chocolate.mp4"></video> -->
+<div class="how-made-box-text-img">
+<img class="how-made-play-button" src="./img/play.png" alt="">
+<img class="how-made-preview" src="./img/preview.png" alt="">
+<div class="how-made-box-text">
+    <p class="how-made-headline">Try  our chocolates today and discover the perfect balance of flavor</p>
+    <ul class="how-made-list">
+        <li class="how-made-item">
+            <p class="how-made-text how-made-text-wight-n-1">Heat the milk in a saucepan without bringing it to a boil. Add sugar and cocoa powder.</p>
+        </li>
+        <li class="how-made-item">
+            <p class="how-made-text">At the same time, prepare a water bath. Melt the butter on it.</p>
+        </li>
+        <li class="how-made-item">
+            <p class="how-made-text how-made-text-wight-n-2">"Mix" the milk mixture and already liquid butter. Mix thoroughly with a silicone spatula so that the mass becomes uniform and silky.</p>
+        </li>
+        <li class="how-made-item">
+            <p class="how-made-text">Heat the mixture over low heat, letting it barely boil.</p>
+        </li>
+        <li class="how-made-item">
+            <p class="how-made-text how-made-text-wight-n-3">Pour the chocolate into special containers (can be replaced with ice molds). Allow to cool and harden.</p>
+        </li>
+    </ul>
+</div>
+
+</div>
         </div>
     </section>
 </body>
