section-our-products

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
     </ul>
         </div>
     </section>
-    <section class="section-how-made">
+    <section class="how-made-section">
         <div class="container">
             <div class="how-made-box"><span class="how-made-title">hOW IT’S <span class="how-made-title-color">made?</span></span></div>
 <!-- <video width="600px" controls preload="auto" src="./how-made-chocolate.mp4"></video> -->
@@ -201,6 +201,45 @@
 </div>
 
 </div>
+        </div>
+    </section>
+    <section class="our-products-section">
+        <div class="container">
+            <div class="our-products-box"><span class="our-products-title">Our <span class="our-products-title-color">pRODUCTS</span></span></div>
+            <ul class="our-products-list">
+                <li class="our-products-item">
+                    <article class="our-products-article">
+                        <img class="our-products-img" src="./img/chocolate-n-1.jpg" alt="">
+                            <p class="our-products-name">orange</p>
+                            <p class="our-products-discribtion">Dark chocolate</p>
+                        <button class="our-products-button">45 UAH</button>
+                    </article>
+                </li>
+                <li class="our-products-item">
+                    <article class="our-products-article">
+                        <img class="our-products-img" src="./img/chocolate-n-2.jpg" alt="">
+                            <p class="our-products-name">APPLE&CRANBERRY</p>
+                            <p class="our-products-discribtion">Milk chocolate</p>
+                        <button class="our-products-button">50 UAH</button>
+                    </article>
+                </li>
+                <li class="our-products-item">
+                    <article class="our-products-article">
+                        <img class="our-products-img" src="./img/chocolate-n-3.jpg" alt="">
+                            <p class="our-products-name">lime&sea salt</p>
+                            <p class="our-products-discribtion">Dark chocolate</p>
+                        <button class="our-products-button">66 UAH</button>
+                    </article>
+                </li>
+                <li class="our-products-item">
+                    <article class="our-products-article">
+                        <img class="our-products-img" src="./img/chocolate-n-4.jpg" alt="">
+                            <p class="our-products-name">pineapple</p>
+                            <p class="our-products-discribtion">Dark chocolate</p>
+                        <button class="our-products-button">54 UAH</button>
+                    </article>
+                </li>
+            </ul>
         </div>
     </section>
 </body>
