section-top-sellers-(unfinished)

--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
         <div class="container buy-section">
             <p class="buy-text">Treat yourself or a loved one to our finest ingredients for a moment of pure delight!</p>
             <div class="buy-box-button">
-                <button class="buy-now-button" type="button">Buy now</button>
-                <button class="buy-how-button" type="button">How it’s made</button>
+                <button type="button" class="buy-now-button" type="button">Buy now</button>
+                <button type="button" class="buy-how-button" type="button">How it’s made</button>
                 <div>
                     <p class="buy-text-scroll">scroll down</p>
                 </div>
@@ -184,6 +184,7 @@
     <ul class="how-made-list">
         <li class="how-made-item">
             <p class="how-made-text how-made-text-wight-n-1">Heat the milk in a saucepan without bringing it to a boil. Add sugar and cocoa powder.</p>
+
         </li>
         <li class="how-made-item">
             <p class="how-made-text">At the same time, prepare a water bath. Melt the butter on it.</p>
@@ -212,7 +213,7 @@
                         <img class="our-products-img" src="./img/chocolate-n-1.jpg" alt="">
                             <p class="our-products-name">orange</p>
                             <p class="our-products-discribtion">Dark chocolate</p>
-                        <button class="our-products-button">45 UAH</button>
+                        <button type="button" class="our-products-button">45 UAH</button>
                     </article>
                 </li>
                 <li class="our-products-item">
@@ -220,7 +221,7 @@
                         <img class="our-products-img" src="./img/chocolate-n-2.jpg" alt="">
                             <p class="our-products-name">APPLE&CRANBERRY</p>
                             <p class="our-products-discribtion">Milk chocolate</p>
-                        <button class="our-products-button">50 UAH</button>
+                        <button type="button" class="our-products-button">50 UAH</button>
                     </article>
                 </li>
                 <li class="our-products-item">
@@ -228,7 +229,7 @@
                         <img class="our-products-img" src="./img/chocolate-n-3.jpg" alt="">
                             <p class="our-products-name">lime&sea salt</p>
                             <p class="our-products-discribtion">Dark chocolate</p>
-                        <button class="our-products-button">66 UAH</button>
+                        <button type="button" class="our-products-button">66 UAH</button>
                     </article>
                 </li>
                 <li class="our-products-item">
@@ -236,10 +237,30 @@
                         <img class="our-products-img" src="./img/chocolate-n-4.jpg" alt="">
                             <p class="our-products-name">pineapple</p>
                             <p class="our-products-discribtion">Dark chocolate</p>
-                        <button class="our-products-button">54 UAH</button>
+                        <button type="button" class="our-products-button">54 UAH</button>
                     </article>
                 </li>
             </ul>
+        </div>
+    </section>
+    <section class="top-sellers-section">
+        <div class="container">
+            <div class="top-sellers-box"><span class="top-sellers-title-color">Our <span class="top-sellers-title">pRODUCTS</span></span></div>
+            <ul class="top-sellers-list">
+                <li class="top-sellers-item">
+                    <img class="top-sellers-img" src="./img/top-chocolate-n-1.png" alt="">
+                </li>
+                <li class="top-sellers-item">
+                    <img class="top-sellers-img" src="./img/top-chocolate-n-2.png" alt="">
+                </li>
+                <li class="top-sellers-item">
+                    <img class="top-sellers-img" src="./img/top-chocolate-n-3.png" alt="">
+                </li>
+            </ul>
+            <div class="top-sellers-mini-list">
+                <p class="top-sellers-text">Crazy enough chocolate originates from a bean just like the coffee bean called Cacao. Cacao has been around for thousands of years and was first discovered by the Native American tribe called the Mayans.</p>
+                <button type="button" class="top-sellers-button"></button>
+            </div>
         </div>
     </section>
 </body>
